# banking-box

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  QUICKSTART.md  README.VTB.md  README.md  alembic.ini  config.py  database.py  docker-compose.yml  docker-entrypoint.sh  main.py  middleware.py  models.py  pyproject.toml  run.py
alembic/: env.py
alembic/data/: banks.csv
alembic/versions/: 001_initial_schema.py  002_seed_data.py  003_add_banks_table.py  004_seed_banks.py  005_add_bank_id_to_consents.py  006_add_client_id_external_and_nullable.py  007_add_interbank_payment_fields.py  007_add_password_hash.py  008_add_admin_table.py  (+2 more)
api/: accounts.py  admin.py  auth.py  balance_allocations.py  banker.py  banks.py  consents.py  customer_leads.py  interbank.py  multibank_proxy.py  payment_consents.py  payments.py  product_agreement_consents.py  product_agreements.py  product_applications.py  product_offer_consents.py  product_offers.py  products.py  ssa_registration.py  virtual_accounts.py  vrp_consents.py  vrp_payments.py  well_known.py
doc/: API.md  QUICKSTART.org.md  README.md  TODO.md  VTB-SWAGGER.md  open-banking.yaml
docs/: swagger.json
docs/diagrams/: README.md  (+2 more)
frontend/: feedback-widget.js
frontend-react/: .dockerignore  .gitignore  Dockerfile  README.md  index.html  package.json  tailwind.config.js  vite.config.ts
notebook/: api_research.ipynb
services/: account_service.py  auth_service.py  cache_utils.py  consent_service.py  external_payment_service.py  payment_service.py  virtual_account_service.py
tests/: test_api_endpoints.py
(+52 files in other folders)
